# xlpod

./: .gitignore  NOTICE  README.md  pyproject.toml  redocly.yaml
.githooks/: README.md  commit-msg
.github/workflows/: ci.yml
client/: README.md  pyproject.toml
client/tests/: test_bundle.py  test_client.py  test_lite_panel.py  test_worker_backend.py
client/xlpod/: __init__.py  _proto.py  _transport.py  bundle.py  client.py  errors.py  models.py
docs/: SECURITY.md  design.md  phase0-report.md  threat-model.md
examples/: README.md  desktop_hello.py  lite_hello.py
examples/living_workbook/: README.md  lite_panel.py
launcher/: Cargo.toml
launcher/xlpod-launcher/: Cargo.toml
launcher/xlpod-launcher/src/: consent_messagebox.rs  main.rs
launcher/xlpod-server/: Cargo.toml
launcher/xlpod-server/src/: audit.rs  auth.rs  bind.rs  ca.rs  config.rs  consent.rs  error.rs  fs_read.rs  lib.rs  main.rs  middleware.rs  python_worker.rs  rate_limit.rs  routes.rs  state.rs  tls.rs
launcher/xlpod-server/src/ai/: anthropic.rs  cost.rs  dispatch.rs  keychain.rs  mod.rs  provider.rs  session.rs  tools.rs  trust_window.rs  types.rs
launcher/xlpod-server/src/worker/: python_worker.py
launcher/xlpod-server/tests/: api.rs
proto/: README.md  xlpod.bundle.md  xlpod.openapi.yaml
scripts/phase0_csp_probe/: README.md  probe.py
