[project]
name = "xlpod-workspace"
version = "0.0.0"
description = "xlpod monorepo root — not published. See client/ for the PyPI package."
# Workspace floor is the most permissive member (the xlpod client supports
# 3.10+). The phase0 probe is 3.12-only on a developer box; it does not
# run in CI under 3.10/3.11 because it is invoked manually.
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = ["client"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "mypy>=1.11",
    "ruff>=0.6",
    "bandit>=1.7",
]
phase0 = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "cryptography>=43",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"
