[workspace]
resolver = "2"
members = ["xlpod-server"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/eddmpython/xlpod"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
