[workspace]
resolver = "2"
members = ["xlpod-server"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/eddmpython/xlpod"

[workspace.lints.rust]
# Default-deny unsafe; the only allowed exception is the Win32 Crypto FFI
# in xlpod-server::ca that silently installs the local CA into the user
# trust store. Every `unsafe` block in the workspace MUST carry an inline
# `// SAFETY:` comment. Reviewers should reject any new `#[allow(unsafe_code)]`
# without an entry in `docs/threat-model.md`.
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
