[package]
name = "xlpod-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Loopback HTTPS server for xlpod. See proto/xlpod.openapi.yaml for the authoritative API surface."

[lints]
workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs", "time", "net", "io-util", "process"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
futures-util = "0.3"
rcgen = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }
sha1 = "0.10"
time = { version = "0.3", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tempfile = "3"
base64 = "0.22"

[[bin]]
name = "xlpod-server"
path = "src/main.rs"

[lib]
name = "xlpod_server"
path = "src/lib.rs"
